modules/security/front-end-sg.tf
resource "aws_security_group" "front_sg" {
  name        = "front_sg"
  description = "Allow inbound traffic from load balancer"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [aws_security_group.lb_sg.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}
    tags = {
        Name = var.front_sg_name
    }
}
